[package]
name = "xberg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-performance document intelligence library for Rust. Extract text, metadata, and structured data from PDFs, Office documents, images, and 96 formats and 306 programming languages via tree-sitter code intelligence with async/sync APIs."
license.workspace = true
repository = "https://github.com/xberg-io/xberg"
homepage = "https://xberg.io"
documentation = "https://docs.rs/xberg"
keywords = ["document", "extraction", "pdf", "ocr", "parser"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[package.metadata.cargo-machete]
ignored = [
    "liter-llm",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "nom-exif",
    # icu_provider is feature-gated and consumed transitively by language-detection;
    # cargo-machete cannot resolve `dep:icu_provider` references in feature flag chains.
    "icu_provider",
    "serde_toon_format",
    # symphonia is optional behind the `transcription` feature; cargo-machete cannot
    # resolve optional dep usage through feature-gated cfg blocks.
    "symphonia",
    # mel_spec is optional behind the `transcription` feature; same constraint.
    "mel_spec",
]

[lib]
crate-type = ["rlib"]

[features]
default = ["tokio-runtime", "simd-utf8"]

# Build-time only: enables pprof flamegraph profiling. No #[cfg] gates —
# activates the pprof dependency (non-Windows, non-WASM only).
profiling = ["dep:pprof"]

pool-metrics = []

simd-utf8 = ["dep:simdutf8"]

tokio-runtime = ["dep:tokio"]

# PDF extraction is currently backed by pdf_oxide. Keep this as the canonical
# `pdf` feature until/unless a second PDF backend is introduced.
pdf = [
    "dep:pdf_oxide",
    "dep:lopdf",
    "dep:image",
    "dep:flate2",
    "html",
    "image-encode",
]
excel = ["dep:calamine", "tokio-runtime"]
excel-wasm = ["dep:calamine"]
office = [
    "dep:cfb",
    "dep:roxmltree",
    "dep:zip",
    "dep:quick-xml",
    "dep:biblatex",
    "dep:biblib",
    "dep:org",
    "dep:dbase",
    "html",
]
hwp = ["dep:cfb", "dep:flate2"]
hwpx = ["dep:unhwp", "dep:zip"]
iwork = ["dep:zip", "dep:snap"]
email = [
    "dep:mail-parser",
    "dep:cfb",
    "dep:outlook-pst",
    "dep:tempfile",
    "dep:chrono",
    "dep:chardetng",
]
html = ["dep:html-to-markdown-rs", "dep:v_htmlescape"]
xml = ["dep:quick-xml", "dep:roxmltree"]
archives = ["dep:zip", "dep:tar", "dep:sevenz-rust2", "dep:flate2"]
mdx = []

liter-llm = ["dep:liter-llm", "dep:minijinja", "ocr-pipeline"]

# Gate for the centralised image re-encode pass (image_encode module).
# Enabled by every feature that activates `dep:image` so the module is always
# available when image processing is possible.  This is the only feature that
# the module declaration in `core/mod.rs` checks.
image-encode = ["dep:image"]

# Lightweight marker feature: shared OCR pipeline infrastructure (quality scoring,
# page rendering, multi-backend pipeline) usable without the Tesseract binary.
# Implied by `liter-llm` so VLM-only OCR works without enabling the full `ocr` feature.
# Also implied by `ocr` and `ocr-wasm` (see those feature definitions).
ocr-pipeline = ["dep:image", "image-encode"]

tree-sitter = ["dep:tree-sitter-language-pack"]
tree-sitter-wasm = ["tree-sitter"]

ocr = [
    "ocr-pipeline",
    "dep:xberg-tesseract",
    "dep:image",
    "dep:tiff",
    "dep:fast_image_resize",
    "dep:nom-exif",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
    "dep:ureq",
    "html",
]
# Embed the English `eng.traineddata` blob (tessdata_fast, ~4 MB) at compile time
# so the runtime tessdata resolver can materialize English OCR offline without a
# network download. Forwarded to xberg-tesseract.
bundle-tessdata-eng = ["xberg-tesseract/bundle-tessdata-eng"]
# WASM OCR: Minimal Tesseract backend without html-to-markdown (which has WASI imports)
# Includes only the core OCR processing dependencies needed for Tesseract on WASM
ocr-wasm = [
    "ocr-pipeline",
    "dep:xberg-tesseract",
    "dep:image",
    "dep:nom-exif",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
]
# HEIF / HEIC / AVIF / HEICS / AVCS decoding via vendored libheif bindings.
# Native-only — libheif is a C library with no working WASM/Android story.
# Pulls in `nom-exif` so HEIC EXIF blocks are readable even without the full `ocr` feature.
# libheif is provisioned as a system library by the `install-system-deps` composite action (built
# from source + cached on Linux/macOS, vcpkg on Windows). Any CI/publish job that builds `heic` must
# run that action first. An embedded source build was tried (commit c16b101ffe) but libheif 1.23.0's
# bundled dav1d plugin fails to compile against current libdav1d, and it stripped the libheif version
# feature on Windows — see CHANGELOG and the `system-libheif-provisioning` note.
heic = ["dep:xberg-libheif", "dep:image", "dep:nom-exif", "image-encode"]
# PaddleOCR type definitions only — pure-Rust config structs, no ORT dependency.
# Exposes PaddleOcrConfig, PaddleLanguage, ModelPaths. Safe on Android/WASM.
paddle-ocr-types = []
# Candle-based VLM OCR backends. Pure-Rust transformer inference via candle —
# no ORT, no native binaries. Compatible with `ort-bundled` / `paddle-ocr`;
# multiple OCR backends can be registered side-by-side.
#
# Per-model sub-features live in xberg-candle-ocr; enable them via
# `--features candle-ocr,xberg-candle-ocr/trocr` or by depending on
# xberg-candle-ocr directly with the sub-feature.
candle-ocr = [
    "dep:xberg-candle-ocr",
    "dep:image",
    "dep:hf-hub",
    "dep:sha2",
    "ocr-pipeline",
    "tokio-runtime",
]
# TrOCR backend: aggregate feature enabling candle-ocr with trocr sub-feature
candle-trocr = ["candle-ocr", "xberg-candle-ocr/trocr"]
# PaddleOCR-VL backend: aggregate feature enabling candle-ocr with paddleocr-vl sub-feature
candle-paddleocr-vl = ["candle-ocr", "xberg-candle-ocr/paddleocr-vl"]
# GLM-OCR backend: aggregate feature enabling candle-ocr with glm-ocr sub-feature; requires layout-detection for paired dispatch
candle-glm-ocr = ["candle-ocr", "xberg-candle-ocr/glm-ocr", "layout-detection"]
# Hunyuan-OCR backend: aggregate feature enabling candle-ocr with hunyuan-ocr sub-feature
candle-hunyuan-ocr = ["candle-ocr", "xberg-candle-ocr/hunyuan-ocr"]
# DeepSeek-OCR backend: aggregate feature enabling candle-ocr with deepseek-ocr sub-feature
candle-deepseek-ocr = ["candle-ocr", "xberg-candle-ocr/deepseek-ocr"]
# Umbrella aggregate for all candle VLM OCR backends (not in full/formats/wasm-target/android-target)
candle-vlm-ocr = [
    "candle-hunyuan-ocr",
    "candle-deepseek-ocr",
    "candle-paddleocr-vl",
    "candle-glm-ocr",
    "candle-trocr",
]
# Candle GPU acceleration pass-throughs. Enable alongside any candle-* backend
# to compile the corresponding candle backend (CUDA / Metal / Accelerate /
# MKL) — CPU decode of the larger VLM backends is impractically slow.
candle-cuda = ["candle-ocr", "xberg-candle-ocr/cuda"]
candle-metal = ["candle-ocr", "xberg-candle-ocr/metal"]
candle-accelerate = ["candle-ocr", "xberg-candle-ocr/accelerate"]
candle-mkl = ["candle-ocr", "xberg-candle-ocr/mkl"]
# PaddleOCR via ONNX Runtime
# Requires 'ocr' feature for shared conversion utilities and table reconstruction
paddle-ocr = [
    "paddle-ocr-types",
    "dep:xberg-paddle-ocr",
    "dep:sha2",
    "dep:image",
    "dep:hf-hub",
    "dep:ureq",
    "dep:ort",
    "image-encode",
    "dep:ndarray",
    "html",
    "tokio-runtime",
    "ocr",
    "auto-rotate",
]
# Bundle ORT binaries via the official Microsoft release (includes CoreML on macOS, CUDA on Linux).
# When active, no system ORT library is required and ort_discovery is skipped.
ort-bundled = ["ort?/download-binaries", "ort?/tls-rustls", "xberg-gliner?/ort-bundled"]
# Build-time only: configures ORT to load ONNX Runtime dynamically at runtime.
# No #[cfg] gates — passed through to the `ort` crate.
ort-dynamic = ["ort?/load-dynamic", "xberg-gliner?/ort-dynamic"]
# Layout detection via ONNX Runtime (YOLO + RT-DETR)
# Document orientation detection using PP-LCNet for auto_rotate
auto-rotate = [
    "auto-rotate-types",
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "dep:ureq",
    "ort-bundled",
]
layout-detection = [
    "layout-types",
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "tokio-runtime",
    "ort-bundled",
]
language-detection = ["dep:whatlang"]
# layout-types: pure-Rust layout struct definitions — no ORT dependency.
# Included by layout-detection; also usable standalone on WASM/Android targets.
layout-types = []
# auto-rotate-types: pure-Rust OrientationResult struct — no ORT dependency.
# Included by auto-rotate; also usable standalone on WASM/Android targets.
auto-rotate-types = []

# Transcription (audio/video speech-to-text via Whisper ONNX + ORT).
# Matches the exact pattern of embeddings / layout-detection / paddle-ocr:
# - transcription-types: pure config structs only (WASM/Android safe, no ORT)
# - transcription: full inference (ORT + hf-hub + symphonia decode). Zero impact when off.
# Excluded from no-ort-target, wasm-target, android-target (x86_64 emulator) exactly like other ORT ML.
transcription-types = []
transcription = [
    "transcription-types",
    "dep:mel_spec",
    "dep:ndarray",
    "dep:ort",
    "dep:hf-hub",
    "dep:sha2",
    "dep:symphonia",
    "dep:lofty",
    "dep:tokenizers",
    "ort-bundled",
    "tokio-runtime",
]

chunking = [
    "dep:auto_enums",
    "dep:either",
    "dep:icu_provider",
    "dep:icu_segmenter",
    "dep:itertools",
    "dep:strum",
]
chunking-tokenizers = ["chunking", "dep:tokenizers"]
# embedding-presets: static preset metadata (WASM-safe, no ORT)
embedding-presets = []
# embeddings: full embedding generation with ONNX Runtime (ORT-dependent, WASM-incompatible)
# NOTE: embedding-presets is a subset of embeddings (no ORT); always implied by embeddings.
embeddings = [
    "dep:hf-hub",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "chunking",
    "tokio-runtime",
    "ort-bundled",
    "embedding-presets",
]
# v5.0.0: cross-encoder reranking.
# reranker-presets: static preset metadata (WASM/Android-safe, no ORT).
reranker-presets = []
# reranker: full cross-encoder inference via ONNX Runtime (ORT-dependent,
# WASM-incompatible). NOTE: reranker-presets is a subset of reranker; always implied.
reranker = [
    "reranker-presets",
    "dep:hf-hub",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "tokio-runtime",
    "ort-bundled",
]
stopwords = []
quality = ["dep:unicode-normalization", "dep:chardetng", "stopwords"]

# Cloud-upstreamed infrastructure (pure-Rust; see gap-closing plan). Generic overridable
# defaults only — no domain knowledge. `heuristics` text-layer detection is gated separately
# under `heuristics-pdf` (added when the pdf_oxide branch lands).
enrichment = []
heuristics = []

keywords-yake = ["stopwords"]
keywords-rake = ["dep:rake", "stopwords"]
keywords = ["keywords-yake", "keywords-rake"]

markdown-footnotes = []

diff = ["dep:similar"]

# OSS v5 follow-up: text analysis, redaction, classification, captioning, QR detection.
# Each feature lands in its own module under `crates/xberg/src/text/` (or
# `crates/xberg/src/extractors/` for QR) and is wired through a built-in
# post-processor under `crates/xberg/src/plugins/processor/builtin/`.
ner = [] # NER result types only; safe on every target.
ner-llm-types = [
    "ner",
] # LlmBackend stub for targets without full ner-llm (Windows, Android x86_64, WASM).
ner-llm = ["ner", "liter-llm"] # LLM-driven zero-shot NER (no ORT).
ner-onnx = [
    # xberg-gliner ONNX backend with Hugging Face model download.
    "ner",
    "dep:xberg-gliner",
    "dep:hf-hub",
    "dep:sha2",
    "ort-bundled",
    "tokio-runtime",
]

presets = [
    "dep:include_dir",
    "dep:jsonschema",
    "dep:sha2",
] # Preset format + registry + loader + resolver; pure-Rust.

# Compatibility feature for public LLM structured extraction through
# `ExtractionConfig::structured_extraction`.
structured = ["liter-llm", "tokio-runtime"]

redaction = ["dep:sha2"] # Pattern-based PII engine; pure-Rust.
redaction-ml = ["redaction", "ner"] # Couple in NER for PERSON/ORG/LOC redaction.

summarization = ["stopwords"] # TextRank extractive only; pure-Rust (uses stopword tables).
summarization-llm = ["summarization", "liter-llm"]

translation = ["liter-llm"]
classification = ["liter-llm"]
captioning = ["liter-llm"]
qr-codes = ["dep:rqrr", "dep:image"] # Pure-Rust QR decoding via rqrr.

# SVG support: parse, sanitize (strip external hrefs/JS/foreignObject), re-serialize,
# and rasterize SVG → PNG/JPEG/WebP via resvg + tiny-skia. Pure-Rust, WASM-safe.
# Text is rendered as paths (no font lookup) because `text` / `system-fonts` features
# are intentionally excluded to avoid native font-scanning deps.
svg = ["dep:resvg", "image-encode"]

tower-service = ["dep:tower", "tokio-runtime"]
url-config-types = ["dep:crawlberg"]
url-ingestion = ["url-config-types", "crawlberg/native-runtime"]
url-ingestion-browser = ["url-ingestion", "crawlberg/browser"]

api-types = []
api = [
    "api-types",
    "tower-service",
    "dep:axum",
    "dep:chrono",
    "dep:moka",
    "dep:tower-http",
    "dep:utoipa",
    "dep:uuid",
    "tokio-runtime",
    # SIGTERM/SIGINT graceful shutdown for the api + mcp-http servers (#1147).
    "tokio?/signal",
    "chunking",
]
mcp = ["tower-service", "dep:rmcp", "tokio-runtime"]
mcp-http = ["mcp", "api"]

otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

# no-ort-target: shared base for targets that cannot use ONNX Runtime (Android x86_64 emulator,
# WASM). Pure-Rust only — no ORT, no native-only C++ deps. Used as a foundation for both
# wasm-target and android-target to avoid duplication.
#
# Excluded:
# - liter-llm: tokenizers → hf-hub → ureq 2.12.1 → rustls 0.23 + socks 0.3 (both wasm-incompatible).
#   Added to android-target explicitly; WASM does not use LLM for now.
# - hwpx: unhwp → zip → xz2 → lzma-sys (native C, missing wasm stdlib). Native-only;
#   re-enabled in android-target.
no-ort-target = [
    "pdf",
    "html",
    "xml",
    "email",
    "language-detection",
    "chunking",
    "chunking-tokenizers",
    "quality",
    "keywords",
    "markdown-footnotes",
    "enrichment",
    "heuristics",
    "office",
    "iwork",
    "hwp",
    "mdx",
    "archives",
    "stopwords",
    "embedding-presets",
    "reranker-presets",
    "layout-types",
    "auto-rotate-types",
    "paddle-ocr-types",
    "ner",
    "presets",
    "redaction",
    "summarization",
    "qr-codes",
    "svg",
    "transcription-types",
]
# wasm-target: no-ort-target plus WASM-specific overrides (excel-wasm, tree-sitter-wasm, ocr-wasm).
# NOTE: tree-sitter-wasm compiles 100+ embedded C parsers (via tree-sitter-language-pack)
# for wasm32-unknown-unknown. Clang uses ~13-14 GB peak RSS during compilation, causing OOM
# on standard GitHub Actions runners (~16 GB). Publish job caps parallelism to 2 (-j 2) to
# reduce memory spikes. Long-term fix: add tree-sitter-wasm-lite feature to tree-sitter-language-pack
# with curated parser set (markdown, javascript, python, rust, json, yaml, html, css, sql, c, etc.)
# and update this aggregate to use it instead of the full tree-sitter feature.
wasm-target = ["no-ort-target", "excel-wasm", "tree-sitter-wasm", "ocr-wasm"]
# android-target: no-ort-target plus native-Linux variants that work on Android ABI
# (excel with tokio, native tree-sitter, Tesseract OCR, and API/MCP transport).
# Excludes ORT-dependent features (paddle-ocr, layout-detection, embeddings, reranker,
# auto-rotate, transcription).
android-target = [
    "no-ort-target",
    "excel",
    "tree-sitter",
    "ocr",
    "api",
    "mcp",
    "liter-llm",
    "structured",
    "hwpx",
    "diff",
    # LLM-driven features that depend only on liter-llm (HTTP), not ORT — safe on
    # the no-ORT android emulator surface, and required so the Dart FRB dispatch
    # (`frb_generated.rs`, not feature-aware) resolves `classify_document`,
    # `caption_image`, and `LlmBackend` instead of referencing configured-out items.
    "classification",
    "captioning",
    "ner-llm",
]
# windows-target: curated feature set for Windows host builds across every
# binding crate. Native libheif/libheif-sys is not installed on the standard
# GitHub `windows-latest` runner image (no libheif.pc on the pkg-config path,
# no vcpkg integration wired into our publish workflow), so this aggregate
# drops `heic` along with the ORT-dependent features that Windows already
# excluded in the FFI Cargo.toml. Mirrors the explicit Windows list that the
# xberg-ffi crate uses; binding crates reach it via per-crate
# `[[crates.<x>.target_dep_overrides]]` blocks in `alef.toml`.
windows-target = [
    "pdf",
    "ocr",
    "chunking",
    "keywords-yake",
    "keywords-rake",
    "language-detection",
    "html",
    "tree-sitter",
    "office",
    "email",
    "archives",
    "stopwords",
    "auto-rotate-types",
    "layout-types",
    "paddle-ocr-types",
    "embedding-presets",
    "reranker-presets",
    "ner",
    "ner-llm-types",
    "presets",
    "redaction",
    "diff",
    "qr-codes",
    "summarization",
    "transcription-types",
    "tokio-runtime",
    "api",
    "mcp",
    "liter-llm",
    "structured",
    "quality",
]
# Mobile deployment preset — formats + analysis + Tesseract OCR + code intelligence + API types.
# Excludes ORT-dependent features (paddle-ocr, layout-detection, embeddings, reranker,
# auto-rotate, transcription)
# and server transport infrastructure (mcp, otel, liter-llm).
mobile = ["formats", "analysis", "ocr", "tree-sitter", "api-types", "tokio-runtime"]
# WASM only: enables wasm-bindgen-rayon for multi-threaded WASM builds.
# No #[cfg] gates — activates the wasm-bindgen-rayon dependency.
wasm-threads = ["dep:wasm-bindgen-rayon"]
# --- Aggregate features ---

# Document format extractors only — no infrastructure or text analysis.
formats = [
    "pdf",
    "excel",
    "office",
    "hwp",
    "hwpx",
    "iwork",
    "email",
    "html",
    "xml",
    "archives",
    "mdx",
    "svg",
    "heic",
]
# Text processing and analysis capabilities.
analysis = [
    "language-detection",
    "chunking",
    "quality",
    "keywords",
    "markdown-footnotes",
    "diff",
]
# Network services and observability infrastructure.
services = ["api", "mcp", "otel"]
# Everything — all formats, analysis, services, OCR, ML, and code intelligence.
full = [
    "formats",
    "analysis",
    "services",
    "url-ingestion",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "embeddings",
    "reranker",
    "transcription",
    "chunking-tokenizers",
    "enrichment",
    "heuristics",
    "tree-sitter",
    "liter-llm",
    "tokio-runtime",
    "diff",
    "ner-llm",
    "ner-onnx",
    "presets",
    "structured",
    "redaction",
    "redaction-ml",
    "summarization",
    "summarization-llm",
    "translation",
    "classification",
    "captioning",
    "qr-codes",
    "heic",
]
# Server deployment preset — formats + analysis + services + OCR.
server = [
    "formats",
    "analysis",
    "services",
    "url-ingestion",
    "ocr",
    "paddle-ocr",
    "layout-detection",
]
# CLI-only features (thin gate for xberg-cli).
cli = ["services", "chunking", "url-ingestion"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
auto_enums = { version = "0.8", optional = true }
axum = { version = "0.8", features = ["macros", "json", "multipart"], optional = true }
base64 = { workspace = true }
biblatex = { version = "0.12", optional = true }
# Pinned to =0.4.3: biblib 0.4.4 bumped to quick-xml ^0.39.2 but still calls
# the removed `Attribute::unescape_value`, so it fails to compile. The exact
# pin stops out-of-workspace builds (PHP/Python sdist run `cargo
# generate-lockfile`, which would re-resolve to the broken 0.4.4). 0.5.x drops
# the `regex` feature we use, so it is not an option yet.
biblib = { version = "=0.4.3", default-features = false, features = [
    "ris",
    "pubmed",
    "xml",
    "regex",
], optional = true }
bitvec = "1.1"
blake3 = { workspace = true }
bytes = { workspace = true }
calamine = { version = "0.35.0", features = ["dates"], optional = true }
cfb = { workspace = true, optional = true }
chardetng = { version = "1.0.0", optional = true }
chrono = { workspace = true, optional = true }
comrak = { workspace = true }
crawlberg = { workspace = true, optional = true }
dbase = { workspace = true, optional = true }
dirs = "6"
either = { version = "1", optional = true }
encoding_rs = { version = "0.8.35" }
fast_image_resize = { version = "6.0.0", optional = true }
flate2 = { version = "1.1", optional = true }
hayro-jbig2 = { version = "0.3", default-features = false, features = ["std"], optional = true }
hayro-jpeg2000 = { version = "0.3", default-features = false, features = [
    "std",
    "simd",
], optional = true }
hex = { workspace = true }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
], optional = true }
icu_provider = { version = "2", features = ["sync"], optional = true }
icu_segmenter = { version = "2", optional = true }
image = { workspace = true, default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "pnm",
    "rayon",
], optional = true }
include_dir = { version = "0.7", optional = true }
indexmap = "2.14.0"
infer = "0.19.0"
itertools = { workspace = true, optional = true }
jotdown = "0.10"
jsonschema = { version = "0.46", optional = true, default-features = false }
libc = { workspace = true }
# lofty: pure-Rust audio tag reader (ID3v1/v2, MP4 atoms, Vorbis comments, FLAC, etc.)
# MIT license. Used for metadata extraction independent of the inference backend.
lofty = { version = "0.24", optional = true }
# liter-llm is declared in the platform-conditional dependencies block below — it must be
# excluded on Windows because it pulls reqwest/rustls -> aws-lc-rs -> aws-lc-sys, which fails
# to build on Windows MSVC.
log = { workspace = true }
lopdf = { version = "0.42.0", optional = true }
mail-parser = { version = "0.11.4", optional = true }
mel_spec = { version = "0.4", optional = true }
memchr = "2.8.2"
memmap2 = { workspace = true }
mime_guess = "2.0"
minijinja = { workspace = true, optional = true }
moka = { version = "0.12", features = ["sync"], optional = true }
ndarray = { version = "0.17", optional = true }
nom-exif = { workspace = true, optional = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { version = "0.32", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
org = { version = "0.3", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-18",
], optional = true }
outlook-pst = { version = "1.2.0", optional = true }
parking_lot = { workspace = true }
pastey = "0.2"
pdf_oxide = { workspace = true, features = ["rendering"], optional = true }
pulldown-cmark = { version = "0.13" }
quick-xml = { version = "0.40.1", features = ["serialize"], optional = true }
rake = { version = "0.3.6", optional = true }
rayon = { workspace = true }
regex = "1.12.4"
resvg = { workspace = true, optional = true }
rmcp = { version = "1.8.0", features = [
    "server",
    "macros",
    "base64",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
], optional = true }
rmp-serde = "1.3"

roxmltree = { version = "0.21.1", optional = true }
rqrr = { version = "0.10", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toon_format = { workspace = true }
serde_yaml_ng = "0.10.0"
sevenz-rust2 = { version = "0.20.2", optional = true }
sha2 = { version = "0.11", optional = true }
simdutf8 = { version = "0.1", optional = true }
similar = { workspace = true, optional = true }
snap = { version = "1.1", optional = true }
strum = { version = "0.28", features = ["derive"], optional = true }
# Symphonia: pure-Rust audio decoder for mp3, wav, m4a/mp4, webm etc.
# MPL-2.0 (file-scoped copyleft, safe for our use). Exception granted in deny.toml.
symphonia = { version = "0.6", optional = true, default-features = false, features = [
    "aac",
    "adpcm",
    "isomp4",
    "mkv",
    "mp3",
    "pcm",
    "wav",
] }
tar = { version = "^0.4", optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tiff = { version = "0.11", optional = true }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["fancy-regex"] }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tower = { version = "0.5", features = ["timeout", "limit", "util"], optional = true }
tower-http = { version = "0.7", features = [
    "cors",
    "trace",
    "limit",
    "catch-panic",
    "request-id",
    "sensitive-headers",
    "compression-gzip",
    "compression-deflate",
    "compression-zstd",
], optional = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.33", optional = true }
unhwp = { version = "0.5.1", default-features = false, features = ["hwpx"], optional = true }
unicode-normalization = { version = "0.1.25", optional = true }
url = { workspace = true }
urlencoding = "2"
utoipa = { version = "5.5", features = ["axum_extras"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
v_htmlescape = { version = "0.17", optional = true }
whatlang = { version = "0.18.0", optional = true }
xberg-gliner = { workspace = true, optional = true }
xberg-libheif = { path = "../xberg-libheif", version = "1.0.0-rc.1", optional = true }
# No `version` on this path-dep: xberg-tesseract carries `links =
# "xberg_tesseract"`, and a versioned path-dep makes the maturin sdist
# resolve two copies (path + registry) of a `links` crate, which cargo rejects
# ("only one package ... may specify the same links value"). The publish-crates
# action injects the version at cargo-publish time, so crates.io still gets a
# version requirement. Do not re-pin it here.
xberg-tesseract = { path = "../xberg-tesseract", optional = true }
zip = { version = ">=7.0.0", optional = true, default-features = false, features = [
    "deflate-flate2",
] }

[target.'cfg(all(not(target_os = "windows"), not(target_arch = "wasm32")))'.dependencies]
liter-llm = { workspace = true, optional = true, features = ["native-http"] }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
# Enable tokenizers `http` feature on native targets so model downloads work via hf-hub.
# Wasm builds get tokenizers without `http` to avoid hf-hub → ureq 2.12.1 → rustls 0.23 (wasm-incompat).
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"], optional = true }
# Candle-based VLM OCR backends - pure-Rust transformer inference, not on WASM yet.
# Note: candle-core unconditionally links platform-specific deps (cudarc on Linux, metal-kernels on macOS).
# To avoid conflicts during feature unification, GPU features (candle-cuda/metal/mkl/accelerate) should
# only be explicitly enabled with platform awareness. CI uses `--features full` which excludes GPU accel.
xberg-candle-ocr = { path = "../xberg-candle-ocr", version = "1.0.0-rc.1", optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
xberg-paddle-ocr = { path = "../xberg-paddle-ocr", version = "1.0.0-rc.1", optional = true }

# Desktop / server hosts (Linux + macOS, NOT Android): ureq uses ring-backed rustls plus
# `platform-verifier`, which trusts the OS certificate store (rustls-native-certs on Linux,
# Security.framework on macOS) and honors SSL_CERT_FILE/SSL_CERT_DIR — satisfying corporate
# TLS-MITM proxies (#1146) with ZERO openssl-sys (so gnu cross-compiles cleanly under zigcc).
# hf-hub rides the same unified ureq provider via its `ureq` feature (no native-tls).
[target.'cfg(all(not(target_os = "windows"), not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier", "json"], optional = true }

# Windows: ureq uses ring-backed rustls + `platform-verifier`, which trusts the Windows system
# certificate store via WinCrypt (#1146) — pure-Rust, no openssl-sys, no aws-lc-sys/MinGW CMake.
[target.'cfg(all(target_os = "windows", not(target_arch = "wasm32")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
# liter-llm: aws-lc-sys MSVC fix shipped in xberg-io/liter-llm; track via git patch.
liter-llm = { workspace = true, optional = true, features = ["native-http"] }
# Enable tokenizers `http` feature on Windows so model downloads work via hf-hub.
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"], optional = true }
# ureq on Windows: ring-backed rustls + platform-verifier (WinCrypt OS trust store, no openssl).
ureq = { version = "3.3", default-features = false, features = [
    "rustls",
    "platform-verifier",
    "json",
], optional = true }
# Candle-based VLM OCR backends - pure-Rust transformer inference, not on WASM yet.
xberg-candle-ocr = { path = "../xberg-candle-ocr", version = "1.0.0-rc.1", optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
xberg-paddle-ocr = { path = "../xberg-paddle-ocr", version = "1.0.0-rc.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tree-sitter-language-pack]
workspace = true
features = ["dynamic-loading", "download", "serde"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# Force-enable the wasm_js backend for every getrandom major in the graph.
# 0.2 is pulled in by ring (via build-deps), 0.3 by ahash/tokenizers/tree-sitter-language-pack,
# 0.4 is the latest. Without these features the wasm_js OS-RNG backend can't be selected.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
liter-llm = { workspace = true, optional = true, features = ["wasm-http"] }
tree-sitter-language-pack = { workspace = true, default-features = false, features = [
    "serde",
], optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }
# On wasm32, swap xberg-tesseract from its native default ("static-linking" -> "build-tesseract")
# to the WASI-SDK build path ("build-tesseract-wasm") and bundle eng.traineddata so OCR works
# in-memory with no filesystem.
# Version-less for the same links-collision reason as the desktop path-dep above
# (publish-crates injects the version at publish time).
xberg-tesseract = { path = "../xberg-tesseract", default-features = false, features = [
    "build-tesseract-wasm",
    "bundle-tessdata-eng",
], optional = true }

# Android: native-tls would pull openssl-sys, which has no working NDK cross-compile (no target
# sysroot). Feature-unification means a single native-tls ureq dep drags OpenSSL onto every ureq
# consumer (including tree-sitter-language-pack's `download`). Use ring-backed rustls + webpki-roots
# instead — it cross-compiles cleanly. Corporate-CA trust (#1146) is a desktop/server concern; mobile
# apps ship their own trust configuration.
[target.'cfg(target_os = "android")'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
ureq = { version = "3.3", default-features = false, features = ["rustls", "json"], optional = true }

[build-dependencies]

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
dotenvy = "0.15"
filetime = "0.2"
image = { workspace = true, default-features = false, features = ["png"] }
# default-features=false drops jsonschema's `resolve-http` (reqwest→native-tls→openssl-sys);
# tests validate local schemas only. Keeps the test build openssl-free.
jsonschema = { version = "0.46", default-features = false }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
serial_test = "3.5.0"
tar = "^0.4"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
zip = { version = ">=7.0.0, <8.7.0", default-features = false, features = ["deflate-flate2"] }

[[test]]
name = "captioning_smoke"
required-features = ["captioning", "pdf"]

[[test]]
name = "structured_pipeline"
required-features = ["structured"]

[[test]]
name = "structured_live"
required-features = ["structured", "pdf"]

[[bench]]
name = "text_quality"
harness = false
required-features = ["quality"]

[lints]
workspace = true
