[package]
name = "e2e-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }

serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
async-trait = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
