[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "llama-index-readers-xberg"
version = "0.1.1"
description = "LlamaIndex reader for 88+ document formats powered by xberg's Rust extraction engine"
readme = "README.md"
keywords = [
  "ai",
  "document-extraction",
  "xberg",
  "llamaindex",
  "llm",
  "ocr",
  "pdf",
  "rag",
  "text-extraction",
]
license = "MIT"
maintainers = [
  { name = "Na'aman Hirschfeld", email = "naaman@xberg.io" },
  { name = "Varun Tandon", email = "varun@xberg.io" },
]
authors = [
  { name = "Xberg.dev", email = "contact@xberg.io" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
  "Topic :: Text Processing :: Indexing",
  "Typing :: Typed",
]
dependencies = [
  "xberg>=1.0.0",
  "llama-index-core>=0.13,<0.15",
]
urls.Homepage = "https://github.com/xberg-io/llama-index-xberg"
urls.Issues = "https://github.com/xberg-io/llama-index-xberg/issues"
urls.Xberg = "https://github.com/xberg-io/xberg"
urls.Repository = "https://github.com/xberg-io/llama-index-xberg"

[dependency-groups]
dev = [
  "pytest>=9",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
]

[tool.hatch]
build.targets.sdist.include = [ "llama_index/" ]
build.targets.wheel.include = [ "llama_index/" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"

[tool.coverage]
run.source = [ "llama_index/readers/xberg" ]
report.fail_under = 80

[tool.llamahub]
contains_example = false
import_path = "llama_index.readers.xberg"
class_authors.XbergReader = "v-tan"
