[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
default-run = "benchmark-harness"

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[[bin]]
name = "kreuzberg-extract"
path = "src/bin/kreuzberg_extract.rs"

[lib]
name = "benchmark_harness"
path = "src/lib.rs"

[dependencies]
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

clap = { workspace = true }

async-trait = { workspace = true }

sysinfo = "0.38"

ahash = { workspace = true }
num_cpus = { workspace = true }
which = "8"
chrono = { workspace = true }
shellexpand = "3"

pprof = { version = "0.15", features = ["flamegraph", "criterion"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tempfile = { workspace = true }

[dev-dependencies]

[features]
default = []
profiling = ["pprof"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
