[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://xberg.io"
default-run = "benchmark-harness"
publish = false

[lib]
name = "benchmark_harness"
path = "src/lib.rs"

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[features]
default = []
profiling = ["pprof"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
glm-ocr-bench = ["xberg/candle-glm-ocr"]
candle-deepseek-ocr-bench = ["xberg/candle-deepseek-ocr"]
candle-paddleocr-vl-15-bench = ["xberg/candle-paddleocr-vl"]

[dependencies]

ahash = { workspace = true }
anyhow = { workspace = true }

async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }

clap = { workspace = true }
futures = { workspace = true }
jsonschema = "0.48"
libc = { workspace = true }
num_cpus = { workspace = true }

pprof = { version = "0.15", features = ["flamegraph", "criterion"], optional = true }
pulldown-cmark = "0.13"
rayon = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3"

sysinfo = "0.38"
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = { version = "0.7", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.7", optional = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
xberg = { path = "../../crates/xberg", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15"
